src/main/java/org/example/object_calisthenics/e_one_dot_per_line/good/VetRepository.java
package org.example.object_calisthenics.e_one_dot_per_line.good;

public interface VetRepository {
	Vet findVet(String name);
}
