src/main/java/org/example/object_calisthenics/e_one_dot_per_line/bad/VetRepository.java
package org.example.object_calisthenics.e_one_dot_per_line.bad;

public interface VetRepository {
	Vet findVet(String name);
}
